finishing the login function view

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -2,65 +2,185 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <android.support.v7.widget.CardView
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="330dp"
+        android:layout_height="400dp"
         app:cardCornerRadius="10dp"
         app:cardBackgroundColor="@color/white"
-        app:cardElevation="10dp"
-        app:contentPadding="10dp"
+        app:cardElevation="5dp"
         app:cardUseCompatPadding="true"
         android:layout_centerInParent="true">
 
-        <ScrollView
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <LinearLayout
+
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center_vertical">
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/dimen_30dp">
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/account_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/account"/>
-
-                </android.support.design.widget.TextInputLayout>
-
-
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="50dp">
-
-                    <android.support.design.widget.TextInputEditText
-                        android:id="@+id/password_text"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/password"/>
-                </android.support.design.widget.TextInputLayout>
+                android:layout_height="@dimen/tool_bar_height"
+                android:background="#FF8F00">
 
                 <TextView
-                    android:id="@+id/goto_sign_up_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:textColor="@color/colorPrimary"
-                    android:paddingTop="@dimen/dimen_5dp"
-                    android:text="@string/no_account_goto_sign_up"/>
+                    android:layout_centerInParent="true"
+                    android:text="@string/login"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/size_18sp"/>
+
+            </RelativeLayout>
+
+            <ScrollView
+                android:scrollbars="none"
+                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="0dp">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_marginTop="@dimen/dimen_20dp"
+                    android:layout_marginLeft="@dimen/dimen_30dp"
+                    android:layout_marginRight="@dimen/dimen_30dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <android.support.design.widget.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/account_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="number"
+                            android:maxLines="1"
+                            android:hint="@string/account"/>
+
+                    </android.support.design.widget.TextInputLayout>
+
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/password_layout"
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <android.support.design.widget.TextInputEditText
+                            android:id="@+id/password_text"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:inputType="textPassword"
+                            android:maxLines="1"
+                            android:hint="@string/password"/>
+                    </android.support.design.widget.TextInputLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/verification_code_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_marginTop="@dimen/dimen_10dp"
+                            android:layout_width="130dp"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentLeft="true"
+                            android:layout_marginBottom="@dimen/dimen_30dp">
+                            <android.support.design.widget.TextInputEditText
+                                android:id="@+id/verification_code_text"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:inputType="number"
+                                android:maxLines="1"
+                                android:hint="验证码"/>
+
+                        </android.support.design.widget.TextInputLayout>
+
+                        <android.support.v7.widget.CardView
+                            app:cardCornerRadius="@dimen/dimen_3dp"
+                            app:cardUseCompatPadding="true"
+                            android:layout_width="110dp"
+                            android:layout_centerInParent="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_height="45dp">
+
+                            <TextView
+                                android:id="@+id/get_verification_code_button"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="获取验证码"
+                                android:clickable="true"
+                                android:background="@drawable/btn_alpha"
+                                android:gravity="center"/>
+                        </android.support.v7.widget.CardView>
+
+
+
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+            </ScrollView>
+
+            <TextView
+                android:id="@+id/goto_sign_up_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:textColor="@color/colorPrimary"
+                android:maxLines="1"
+                android:layout_marginTop="@dimen/dimen_10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="@dimen/dimen_30dp"
+                android:text="@string/no_account_goto_sign_up"/>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/tool_bar_height">
+
+                <android.support.v7.widget.CardView
+                    app:cardCornerRadius="@dimen/dimen_3dp"
+                    app:cardUseCompatPadding="true"
+                    android:layout_width="100dp"
+                    android:layout_height="45dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="验证登录"
+                        android:clickable="true"
+                        android:background="@drawable/btn_alpha"
+                        android:gravity="center"/>
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    app:cardCornerRadius="@dimen/dimen_3dp"
+                    app:cardUseCompatPadding="true"
+                    android:layout_width="100dp"
+                    android:layout_marginLeft="@dimen/dimen_20dp"
+                    android:layout_height="45dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:text="马上登录"
+                        android:clickable="true"
+                        android:background="@drawable/btn_alpha"
+                        android:gravity="center"/>
+
+                </android.support.v7.widget.CardView>
+
+
             </LinearLayout>
 
-        </ScrollView>
-
+        </LinearLayout>
 
 
     </android.support.v7.widget.CardView>
