重构网络请求框架

--- a/app/src/main/res/layout/main_tab_msg_item.xml
+++ b/app/src/main/res/layout/main_tab_msg_item.xml
@@ -50,7 +50,7 @@
             android:layout_marginTop="5dp"
             android:textSize="15sp"
             android:maxLines="1"
-            android:text="the last message"/>
+            android:text="the last title"/>
 
         <TextView
             android:id="@+id/time"
