--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -181,7 +181,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/tool_bar_height">
 
-                <!--button type of login-->
+                <!--butdataTypetype of login-->
                 <android.support.v7.widget.CardView
                     app:cardCornerRadius="@dimen/dimen_3dp"
                     app:cardUseCompatPadding="true"
