--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -31,4 +31,6 @@
     <dimen name="size_16sp">16sp</dimen>
     <dimen name="dimen_20dp">20dp</dimen>
     <dimen name="dimen_15dp">15dp</dimen>
+    <dimen name="dimen_24dp">24dp</dimen>
+    <dimen name="dimen_11dp">11dp</dimen>
 </resources>
