--- a/app/src/main/res/layout/main_tab_friends_item.xml
+++ b/app/src/main/res/layout/main_tab_friends_item.xml
@@ -5,15 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:id="@+id/item_view"
     android:layout_marginLeft="@dimen/dimen_5dp"
     android:layout_marginRight="@dimen/dimen_5dp"
     app:cardBackgroundColor="@color/white"
     app:cardElevation="1dp"
-    app:contentPadding="12dp"
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="3dp">
 
     <RelativeLayout
+        android:background="@drawable/btn_alpha"
+        android:padding="@dimen/dimen_12dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
