--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -36,4 +36,6 @@
     <dimen name="dimen_60dp">60dp</dimen>
     <dimen name="dimen_50dp">50dp</dimen>
     <dimen name="dimen_100dp">100dp</dimen>
+    <dimen name="dimen_18dp">18dp</dimen>
+    <dimen name="dimen_150dp">150dp</dimen>
 </resources>
