--- a/app/src/main/res/layout/chat_send_msg_item.xml
+++ b/app/src/main/res/layout/chat_send_msg_item.xml
@@ -18,6 +18,7 @@
         android:textColor="@color/white"
         android:layout_gravity="center_horizontal"
         android:padding="2dp"
+        android:textSize="10sp"
         android:text="2017-8-18,上午"/>
 
     <LinearLayout
@@ -25,6 +26,15 @@
         android:layout_height="wrap_content"
         android:gravity="end"
         android:orientation="horizontal">
+
+        <View
+            android:id="@+id/status_view"
+            android:background="@drawable/ic_blue_circle"
+            android:layout_marginRight="@dimen/dimen_3dp"
+            android:layout_gravity="center_vertical"
+            android:layout_width="@dimen/dimen_5dp"
+            android:layout_height="@dimen/dimen_5dp"/>
+
 
         <android.support.v7.widget.CardView
             app:cardUseCompatPadding="true"
@@ -164,8 +174,8 @@
             android:src="@drawable/ic_person_48dp"
             android:layout_marginTop="@dimen/dimen_7dp"
             app:civ_fill_color="@color/half_alpha_gray"
-            app:civ_border_width="@dimen/dimen_3dp"
-            app:civ_border_color="#7f4E342E"/>
+            app:civ_border_width="@dimen/dimen_2dp"
+            app:civ_border_color="#3f4E342E"/>
 
 
     </LinearLayout>
