--- a/app/src/main/res/layout/main_tab_msg_item.xml
+++ b/app/src/main/res/layout/main_tab_msg_item.xml
@@ -55,7 +55,8 @@
                 android:layout_marginTop="5dp"
                 android:textSize="15sp"
                 android:maxLines="1"
-                android:text="the last title"/>
+                android:ellipsize="end"
+                android:text="the last msg"/>
 
             <TextView
                 android:id="@+id/time"
