--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,4 +38,6 @@
     <dimen name="dimen_100dp">100dp</dimen>
     <dimen name="dimen_18dp">18dp</dimen>
     <dimen name="dimen_150dp">150dp</dimen>
+    <dimen name="dimen_70dp">70dp</dimen>
+    <dimen name="dimen_55dp">55dp</dimen>
 </resources>
