--- a/app/src/main/res/layout/fragment_new_member.xml
+++ b/app/src/main/res/layout/fragment_new_member.xml
@@ -2,10 +2,11 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="com.example.jinphy.simplechat.modules.system_msg.notice.NoticeFragment">
+             tools:context="com.example.jinphy.simplechat.modules.system_msg.new_friend.NewFriendsFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
+
 </FrameLayout>
