--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -1,4 +1,4 @@
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,4 +15,6 @@
 
     </android.support.v7.widget.RecyclerView>
 
-</FrameLayout>
+    <include layout="@layout/layout_empty_view"/>
+
+</RelativeLayout>
