--- a/app/src/main/res/layout/layout_system_notice_item.xml
+++ b/app/src/main/res/layout/layout_system_notice_item.xml
@@ -13,61 +13,76 @@
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="3dp">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:padding="@dimen/dimen_12dp"
-        android:background="@drawable/btn_alpha"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <LinearLayout
+            android:orientation="vertical"
+            android:padding="@dimen/dimen_12dp"
+            android:background="@drawable/btn_alpha"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_50dp">
-            <TextView
-                android:id="@+id/title_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerInParent="true"
-                android:textColor="@color/colorAccent"
-                android:textSize="18sp"
-                android:maxLines="1"
-                tools:text="标题"/>
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/time_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginBottom="@dimen/dimen_3dp"
-                android:textColor="@color/colorAccent"
-                android:textSize="11sp"
-                tools:text="2017-8-10"/>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_50dp">
+                <TextView
+                    android:id="@+id/title_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerInParent="true"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="18sp"
+                    android:maxLines="1"
+                    tools:text="标题"/>
+
+                <TextView
+                    android:id="@+id/time_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginBottom="@dimen/dimen_3dp"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="11sp"
+                    tools:text="2017-8-10"/>
+
+            </RelativeLayout>
 
             <View
-                android:id="@+id/new_msg_view"
-                android:background="@drawable/ic_blue_circle"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
-                android:layout_width="@dimen/dimen_5dp"
-                android:layout_height="@dimen/dimen_5dp"/>
+                android:background="@color/half_alpha_gray"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dimen_1dp"/>
 
-        </RelativeLayout>
-
-        <View
-            android:background="@color/half_alpha_gray"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_1dp"/>
+            <TextView
+                android:id="@+id/content_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:textSize="15sp"
+                tools:text="the last title"/>
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/content_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:textSize="15sp"
-            tools:text="the last title"/>
-    </LinearLayout>
+            android:id="@+id/new_msg_view"
+            android:background="#8f4E342E"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:text="NEW"
+            android:textSize="8sp"
+            android:rotation="45"
+            android:gravity="center"
+            android:layout_marginTop="@dimen/dimen_10dp"
+            android:layout_marginRight="-15dp"
+            android:padding="@dimen/dimen_1dp"
+            android:textColor="@color/white"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"/>
+
+
+    </RelativeLayout>
 
 
 </android.support.v7.widget.CardView>
