--- a/app/src/main/res/layout/main_tab_msg_item.xml
+++ b/app/src/main/res/layout/main_tab_msg_item.xml
@@ -13,7 +13,7 @@
     app:cardUseCompatPadding="true"
     app:cardCornerRadius="3dp">
 
-    <FrameLayout
+    <RelativeLayout
         android:background="@drawable/btn_alpha"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -36,19 +36,19 @@
 
             <TextView
                 android:id="@+id/name"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/avatar"
                 android:layout_marginLeft="20dp"
                 android:textColor="@color/colorAccent"
                 android:textSize="18sp"
                 android:maxLines="1"
+                android:ellipsize="end"
                 android:text="name of friends"/>
             <TextView
                 android:id="@+id/last_msg"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:maxWidth="150dp"
                 android:layout_below="@id/name"
                 android:layout_toRightOf="@id/avatar"
                 android:layout_marginLeft="20dp"
@@ -62,7 +62,7 @@
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:textColor="@color/colorAccent"
                 android:textSize="11sp"
@@ -77,7 +77,7 @@
                 android:textSize="11sp"
                 android:textColor="@color/white"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
                 android:background="@drawable/ic_blue_circle"
                 android:padding="2dp"
                 android:minWidth="@dimen/dimen_18dp"
@@ -88,13 +88,16 @@
 
         <View
             android:id="@+id/top"
-            android:visibility="gone"
-            tools:visibility="visible"
             android:background="@color/colorAccent"
-            android:layout_width="@dimen/dimen_3dp"
-            android:layout_height="match_parent"/>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:rotation="45"
+            android:layout_marginTop="-25dp"
+            android:layout_marginLeft="-25dp"
+            android:layout_width="20dp"
+            android:layout_height="wrap_content"/>
 
-    </FrameLayout>
+    </RelativeLayout>
 
 
 </android.support.v7.widget.CardView>
