--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,4 +40,6 @@
     <dimen name="dimen_150dp">150dp</dimen>
     <dimen name="dimen_70dp">70dp</dimen>
     <dimen name="dimen_55dp">55dp</dimen>
+    <dimen name="dimen_45dp">45dp</dimen>
+    <dimen name="dimen_35dp">35dp</dimen>
 </resources>
