--- a/app/src/main/res/layout/fragment_modify_group.xml
+++ b/app/src/main/res/layout/fragment_modify_group.xml
@@ -184,6 +184,7 @@
         android:layout_gravity="bottom"
         android:gravity="center"
         android:paddingTop="@dimen/dimen_5dp"
+        android:paddingBottom="@dimen/dimen_5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
