--- a/app/src/main/res/layout/layout_member_list_item.xml
+++ b/app/src/main/res/layout/layout_member_list_item.xml
@@ -33,12 +33,25 @@
             android:id="@+id/name_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="170dp"
             android:layout_toRightOf="@id/avatar_view"
             android:layout_marginLeft="20dp"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
             android:maxLines="1"
-            android:text="name of friends"/>
+            android:ellipsize="end"
+            tools:text="name of friends"/>
+
+        <ImageView
+            android:id="@+id/not_allow_chat_view"
+            android:layout_toRightOf="@id/avatar_view"
+            android:layout_marginLeft="-8dp"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/ic_not_allow_chat_24dp"
+            android:tint="@color/half_alpha_gray"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
         <TextView
             android:id="@+id/account_view"
             android:layout_width="wrap_content"
@@ -54,19 +67,28 @@
             android:text="G_156464"/>
 
 
-        <ImageView
-            android:src="@drawable/ic_more_24dp"
-            android:layout_centerInParent="true"
-            android:layout_alignRight="@+id/more_view"
-            android:layout_alignLeft="@+id/more_view"
-            android:layout_width="@dimen/dimen_24dp"
-            android:layout_height="@dimen/dimen_24dp"/>
-        <View
+        <RelativeLayout
             android:id="@+id/more_view"
             android:layout_centerInParent="true"
             android:layout_alignParentRight="true"
             android:layout_width="@dimen/dimen_55dp"
-            android:layout_height="@dimen/dimen_55dp"/>
+            android:layout_height="@dimen/dimen_55dp">
+
+            <ImageView
+                android:src="@drawable/ic_more_24dp"
+                android:layout_centerInParent="true"
+                android:layout_width="@dimen/dimen_24dp"
+                android:layout_height="@dimen/dimen_24dp"/>
+
+        </RelativeLayout>
+
+        <CheckBox
+            android:id="@+id/check_box"
+            android:layout_centerInParent="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="@dimen/dimen_10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
     </RelativeLayout>
 
