群聊功能还未完成（剩下聊天模块）

--- a/app/src/main/res/layout/layout_select_item.xml
+++ b/app/src/main/res/layout/layout_select_item.xml
@@ -8,6 +8,7 @@
     android:layout_height="65dp"
     android:layout_marginLeft="@dimen/dimen_5dp"
     android:layout_marginRight="@dimen/dimen_5dp"
+    android:layout_marginTop="@dimen/dimen_5dp"
     app:cardBackgroundColor="@color/white"
     app:cardElevation="1dp"
     app:cardUseCompatPadding="true"
@@ -35,7 +36,7 @@
             android:layout_height="wrap_content"
             android:maxWidth="170dp"
             android:layout_toRightOf="@id/avatar_view"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:layout_centerInParent="true"
             android:textColor="@color/colorAccent"
             android:textSize="18sp"
