--- a/app/src/main/res/layout/menu_select_friend_dialog.xml
+++ b/app/src/main/res/layout/menu_select_friend_dialog.xml
@@ -2,81 +2,41 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     app:cardBackgroundColor="@color/white"
-    app:cardElevation="@dimen/dimen_50dp"
+    app:cardElevation="@dimen/dimen_5dp"
     app:cardCornerRadius="@dimen/dimen_5dp"
-    app:cardUseCompatPadding="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:padding="@dimen/dimen_5dp"
         android:orientation="vertical"
+        android:background="@color/white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.CardView
-            android:id="@+id/head_view"
-            app:cardBackgroundColor="@color/white"
-            app:cardElevation="@dimen/dimen_55dp"
-            android:layout_width="match_parent"
-            android:layout_height="56dp">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <RelativeLayout
-                    android:id="@+id/btn_cancel"
-                    android:layout_width="56dp"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/cancel_view"
-                        android:src="@drawable/ic_arrow_left_24dp"
-                        android:tint="@color/colorPrimary"
-                        android:layout_centerInParent="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                </RelativeLayout>
-
-                <TextView
-                    android:id="@+id/title_view"
-                    android:layout_centerInParent="true"
-                    android:text="请选择"
-                    android:textColor="@color/colorPrimary"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-
-
-                <RelativeLayout
-                    android:id="@+id/btn_confirm"
-                    android:layout_alignParentRight="true"
-                    android:layout_width="56dp"
-                    android:layout_height="match_parent">
-                    <TextView
-                        android:id="@+id/confirm_view"
-                        android:text="确定"
-                        android:textColor="@color/green_primary"
-                        android:layout_centerInParent="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                </RelativeLayout>
-            </RelativeLayout>
-
-        </android.support.v7.widget.CardView>
+        <include layout="@layout/layout_header_view"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
-            android:layout_weight="1"
+            android:overScrollMode="never"
+            android:layout_marginTop="56dp"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_0dp">
+            android:layout_height="match_parent">
 
         </android.support.v7.widget.RecyclerView>
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/empty_view"
+            android:text="没有可选好友！"
+            android:layout_marginTop="56dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
